--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Customize Theme</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
 
@@ -18,11 +16,11 @@
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
           <a class="navbar-brand" href="#">Changing Theme</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse right">
@@ -32,7 +30,6 @@
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
-        <!--/.nav-collapse -->
       </div>
     </nav>
 
@@ -49,7 +46,6 @@
                 Click
                 <stong>Save Changes</stong> to apply the theme.
               </p>
-
             </div>
             <div class="modal-body">
               <select class="selectpicker" id="themeOptions">
@@ -66,17 +62,13 @@
       <div class="row">
         <div class="col-md-8 centered">
           <h1>Click on the Button to Change the Theme</h1>
-          <button class="btn btn-success" onclick="changeTheme()">Change Theme</button>
-          <button class="btn btn-danger" onclick="localStorage.clear();"> Clear Theme/Cache</button>
-
+          <button class="btn btn-success" id="changeTm">Change Theme</button>
+          <button class="btn btn-danger" id="clearStorage"> Clear Theme/Cache</button>
           <h2 id="numVisitors"></h2>
         </div>
       </div>
     </div>
-    <!-- /.container -->
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
   </body>
